update router list test

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ button:focus{
    background-repeat: none;
    background-position: center;
    border-bottom: 1px solid white !important;
+   color: rgb(0, 80, 252);
+   box-shadow: 2px 2px blue;
 
 }
 
