--- a/src/components/UserModule/MenuMobiles/styles.css
+++ b/src/components/UserModule/MenuMobiles/styles.css
@@ -1,8 +1,8 @@
 .MuiDrawer-paperAnchorRight {
   left: 30% !important;
-  top: 58px !important;
+  top: 62px !important;
   width: 70% !important; 
-  box-shadow: 0px 0px 2px 2px rgba(73, 73, 73, 0.39) !important;
+  /* box-shadow: 0px 0px 2px 2px rgba(73, 73, 73, 0.39) !important; */
   height: 100% !important;
   background-color: rgba(255, 255, 255, 0) !important
   
