--- a/src/components/UserModule/Navbar/styles.css
+++ b/src/components/UserModule/Navbar/styles.css
@@ -16,6 +16,7 @@ a.selected {
     display: block !important;
     height: 30px !important;
     margin-top: 10px !important;
+    
   }
 }
 @media screen and (min-width: 700px) {
@@ -28,4 +29,7 @@ a.selected {
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.2) ,
      0px 1px 10px 0px rgba(0, 0, 0, 0.2) !important;
+}
+.demo_{
+  color: tomato;
 }
