update admin layout

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ button:focus{
    background-repeat: none;
    background-position: center;
    border-bottom: 1px solid white !important;
-   color: rgb(10, 32, 41);
+   color: rgba(0, 0, 0, 0.767);
    box-shadow: 2px 2px blue;
 
 }
