--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,20 @@ button:focus{
    background-repeat: none;
    background-position: center;
    border-bottom: 1px solid white !important;
-   color: rgba(0, 0, 0, 0.767);
+   color: rgb(190, 187, 187);
    box-shadow: 2px 2px blue;
+   
 
 }
 
+::-webkit-scrollbar-thumb {
+    background-color: #0532ffc9;
+  }
+  ::-webkit-scrollbar {
+    width: 8px;
+    background-color: #F5F5F5;
+  } 
+  ::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+    background-color: #F5F5F5;
+  }
