--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@ button:focus{
    background-repeat: none;
    background-position: center;
    border-bottom: 1px solid white !important;
-   color: rgb(190, 187, 187);
+   color: rgba(0, 0, 0, 0.692);
    box-shadow: 2px 2px blue;
+   
    
 
 }
