--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,26 @@
-button:focus{
-    outline: none ;
+button:focus {
+  outline: none;
 }
 
 #demoCss {
-    color: rgba(255, 255, 255, 0.445);
-    text-transform: lowercase;
-    background-size: cover;
-   background-repeat: none;
-   background-position: center;
-   border-bottom: 1px solid white !important;
-   color: rgb(201, 147, 32);
-   box-shadow: 2px 2px blue;
-   
-   
-
+  color: rgba(255, 255, 255, 0.445);
+  text-transform: lowercase;
+  background-size: cover;
+  background-repeat: none;
+  background-position: center;
+  border-bottom: 1px solid white !important;
+  color: rgb(201, 147, 32);
+  box-shadow: 2px 2px blue;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #0532ffc9;
-  }
-  ::-webkit-scrollbar {
-    width: 8px;
-    background-color: #F5F5F5;
-  } 
-  ::-webkit-scrollbar-track {
-    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
-    background-color: #F5F5F5;
-  }
+  background-color: rgb(24, 77, 250);
+}
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: #f5f5f5;
+}
+::-webkit-scrollbar-track {
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+  background-color: #f5f5f5;
+}
