--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,19 @@ button:focus {
   color: rgb(201, 147, 32);
   box-shadow: 2px 2px rgb(0, 0, 0);
   font-weight: 900;
+  background-repeat: no-repeat;
+  text-decoration: none;
+  list-style: none;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgb(24, 77, 250);
 }
 ::-webkit-scrollbar {
-  width: 8px;
-  background-color: #f5f5f5;
+  width: 15px;
+  background-color: #f5f5f55e;
 }
 ::-webkit-scrollbar-track {
-  /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); */
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
   background-color: #f5f5f5;
 }
