show result test

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ button:focus {
   background-repeat: no-repeat;
   text-decoration: none;
   list-style: none;
+  color: rgba(255, 255, 255, 0.432);
 }
 
 ::-webkit-scrollbar-thumb {
