--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,15 @@ button:focus {
   font-weight: 900;
   background-repeat: no-repeat;
   text-decoration: none;
- color: rgba(255, 255, 255, 0.541);
+ color: rgba(0, 47, 255, 0.144);
+ text-transform: capitalize;
 }
 
-::-webkit-scrollbar-thumb {
+#root{
+  --heightCarousel : 550px
+}
+
+/* ::-webkit-scrollbar-thumb {
   background-color: rgb(24, 77, 250);
 }
 ::-webkit-scrollbar {
@@ -27,7 +32,7 @@ button:focus {
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
   background-color: #f5f5f5;
-}
+} */
 
 
 
